AC_INIT([gpass-export], [0], [ueno@unixuser.org])
AC_CONFIG_SRCDIR([configure.ac])
AC_PREREQ(2.63)
AM_INIT_AUTOMAKE
AC_GNU_SOURCE

AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_CC_STDC
AC_PROG_INSTALL
AC_C_BIGENDIAN

gl_EARLY
gl_INIT

NEED_LIBGCRYPT_API=1
NEED_LIBGCRYPT_VERSION=1.5.0
AM_PATH_LIBGCRYPT("$NEED_LIBGCRYPT_API:$NEED_LIBGCRYPT_VERSION", ,
  AC_MSG_ERROR([libgcrypt not found]))

NEED_GPGME_API=1
NEED_GPGME_VERSION=1.1.0
AM_PATH_GPGME("$NEED_GPGME_API:$NEED_GPGME_VERSION", ,
  AC_MSG_ERROR([gpgme not found]))

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile
lib/Makefile])
AC_OUTPUT
